# cheat

./: .coverage  .gitignore  CLAUDE.md  findings.md  progress.md  pyproject.toml  task_plan.md
docs/plans/: 2026-03-18-yolo-behavior-tree-ui-design.md  2026-03-18-yolo-behavior-tree-ui-implementation.md
src/auto_ops/: app.py  logging.py
src/auto_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/auto_ops/behavior_tree/: nodes.py  runner.py
src/auto_ops/capture/: base.py  windows.py
src/auto_ops/config/: loader.py  models.py
src/auto_ops/detector/: base.py  fake.py  yolo.py
src/auto_ops/executor/: base.py  windows.py
src/auto_ops/orchestrator/: engine.py
src/auto_ops/priority/: scorer.py
src/auto_ops/resources/: browser_demo.yaml
src/auto_ops/shared/: enums.py  models.py
src/auto_ops/state/: builder.py
src/auto_ops/training/: __init__.py  collector.py  (+3 more)
strategies/scenes/: browser_demo.yaml
strategies/training/: browser_demo_train.yaml
tests/: test_import_app.py  test_logging_setup.py
tests/behavior_tree/: test_runner.py
tests/capture/: test_window_capture.py  test_windows_capture.py
tests/config/: test_loader.py
tests/detector/: test_fake_detector.py  test_yolo_adapter.py
tests/executor/: test_windows_executor.py
tests/orchestrator/: test_engine.py  test_preview_cycle.py  test_priority_and_state_integration.py
tests/priority/: test_scorer.py
tests/state/: test_builder.py
tests/training/: test_collector.py  test_dataset.py  test_spec.py
tests/ui/: test_app.py  test_main_window.py  test_view_model.py
(+3 files in other folders)
