[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ops"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "pydantic>=2.11.0",
  "mss>=9.0.1",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-qt>=4.4.0"]
app = [
  "ultralytics>=8.3.0",
  "pywin32>=308; sys_platform == 'win32'",
  "pyautogui>=0.9.54",
  "PySide6>=6.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
auto_ops = ["resources/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
